--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,6 @@ nav {
         margin: 59px auto 0;
         width: 1200px;
         display: grid;
-        grid-template-columns: 204px 351px 392px 120px 110;
+        grid-template-columns: 204px 351px 392px 120px 110px;
     }
 }
