--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+// 清理格式
 * {
   margin: 0;
   padding: 0;
@@ -5,46 +6,75 @@
   box-sizing: border-box;
 }
 
+// 橫幅
 #banner {
   background-image: url(./img/banner.png);
   width: 1920px;
   height: 1280px;
+  // 格線會將子元素改為區塊元素
+  display: grid;
+  // 垂直置中
+  align-items: center;
+
+  //行內元素
+  img {
+    //區塊才可使用
+    //左右對齊
+    margin: 0 auto;
+  }
 }
 
 // 導覽列
 nav {
-    // 固定
-    position: fixed;
-    width: 1920px;
+  // 固定
+  position: fixed;
+  width: 1920px;
 
-    a {
-        text-decoration: none;
-        color: white;
-    }
+  // 導覽列 內的 a
+  a {
+    text-decoration: none;
+    color: white;
+  }
 
-    // 導覽列內的盒子
-    #box {
-        margin: 59px auto 0;
-        width: 1200px;
-        display: grid;
-        grid-template-columns: 204px 351px 392px 120px 110px;
+  // 導覽列內的 box
+  #box {
+    margin: 59px auto 0;
+    width: 1200px;
+    display: grid;
+    grid-template-columns: 204px 351px 392px 120px 110px;
 
-        // box 內的 link
-        #link {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+    // box 內的 link
+    #link {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      //垂直對齊：底線
+      align-items: flex-end;
 
-            // link 內的 a
-            a {
-                font-size: 18px;
-                font-weight: 100;
-            }
+      // link 內的 a
+      a {
+        font-size: 18px;
+        font-weight: 100;
+
+        //a 的第2個元素
+        &:nth-child(2) {
+          text-align: center;
         }
 
-        // box 內的 social
-        #social {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
+        //a 的第三個元素
+        &:nth-child(3) {
+          text-align: right;
         }
+      }
     }
+
+    // box 內的 social
+    #social {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+
+      a:nth-child(2) {
+        text-align: right;
+      }
+    }
+  }
 }
