內容區域背景與標題

--- a/style.css
+++ b/style.css
@@ -74,4 +74,18 @@ nav #box #social {
 nav #box #social a:nth-child(2) {
   text-align: right;
 }
+
+#contant {
+  width: 1920px;
+  height: 500px;
+  background-image: url(./img/paper.png);
+}
+
+#contant h1 {
+  text-align: center;
+  margin-top: 46px;
+  font-weight: 300;
+  letter-spacing: 9.6px;
+  font-size: 32px;
+}
 /*# sourceMappingURL=style.css.map */
