--- a/style.scss
+++ b/style.scss
@@ -78,3 +78,18 @@ nav {
     }
   }
 }
+
+// 內容區域
+#contant {
+  width: 1920px;
+  height: 500px;
+  background-image: url(./img/paper.png);
+
+  h1 {
+    text-align: center;
+    margin-top: 46px;
+    font-weight: 300;
+    letter-spacing: 9.6px;
+    font-size: 32px;
+  }
+}
