--- a/style.scss
+++ b/style.scss
@@ -82,14 +82,27 @@ nav {
 // 內容區域
 #contant {
   width: 1920px;
-  height: 500px;
   background-image: url(./img/paper.png);
+  border: 0.1px solid rgba(0, 0, 0, 0);
 
   h1 {
     text-align: center;
     margin-top: 46px;
+    margin-bottom: 60px;
     font-weight: 300;
     letter-spacing: 9.6px;
     font-size: 32px;
+  }
+
+  #news {
+      width: 1200px;
+      //置中對齊
+      margin: 0 auto;
+      //格線系統
+      display: grid;
+      //3個平均分配
+      grid-template-columns: repeat(3, 1fr);
+      //間距 20px
+      grid-gap: 20px;
   }
 }
