--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,9 @@
 $green: #49aa45;
 $gray333: #333333;
+$yellow: #f5bb28;
+$grayccc: #cccccc;
+$black000: #000000;
+$black25: #252525;
 
 // 清理格式
 * {
@@ -129,15 +133,137 @@ nav {
         text-align: center;
       }
 
+      hr {
+          border: 0.5px solid #000;
+          width: 0;
+          transition: 0.5s;
+      }
+
+      &:hover {
+          hr {
+              width: 100%;
+          }
+      }
+
       p {
-          color: $gray333;
-          font-size: 15px;
-          font-weight: 300;
-          line-height: 1.88;
-          letter-spacing: 4px;
-          text-align-last: left;
-          margin: 30px 0;
+        color: $gray333;
+        font-size: 15px;
+        font-weight: 300;
+        line-height: 1.88;
+        letter-spacing: 4px;
+        text-align-last: left;
+        margin: 30px 0;
       }
     }
   }
+}
+
+//推薦飲品
+#product {
+  text-align: center;
+  width: 1200px;
+  margin: 0 auto;
+  //父元素 相對定位
+  position: relative;
+
+  div {
+    width: 220px;
+    height: 340px;
+    //子元素 絕對定位
+    position: absolute;
+    top: 73px;
+    right: 161px;
+
+    h3 {
+      font-size: 28px;
+      font-weight: 300;
+      letter-spacing: 8.4px;
+      color: $yellow;
+    }
+
+    h4 {
+      font-size: 14px;
+      font-weight: 300;
+      letter-spacing: 2.8px;
+      color: $grayccc;
+      margin-top: 30px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 2.5;
+      letter-spacing: 5px;
+      color: $black000;
+      margin-top: 46px;
+    }
+  }
+}
+
+//經營理念
+#idea {
+  width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 620px auto;
+  grid-gap: 20px;
+  padding-right: 20px;
+
+  img {
+    width: 100%;
+    border: solid 10px white;
+  }
+
+  div {
+    h2 {
+      font-size: 22px;
+      font-weight: 300;
+      letter-spacing: 7.2px;
+      color: $black000;
+    }
+
+    p {
+      font-size: 18px;
+      font-weight: 300;
+      line-height: 2.5;
+      letter-spacing: 6px;
+      color: $black000;
+      margin: 51px 0;
+    }
+
+    a {
+      font-size: 16px;
+      font-weight: 300;
+      letter-spacing: 5.4px;
+      text-decoration: none;
+      color: $black25;
+      border: solid 2px $black25;
+      padding: 17px 67px;
+    }
+  }
+}
+
+//頁尾
+footer {
+    text-align: center;
+
+    img {
+        margin: 126px 0 73px;
+    }
+
+    p {
+        font-size: 12px;
+        font-weight: 300;
+        letter-spacing: 3.6px;
+        //子元素並指定類型
+        //footer 內有三個子元素，分別:img, p1, p2
+        //&:nth-child(1) 會得到第一個子元素 img
+        //p:nth-of-type(1) 會得到第一個類型為 p 的子元素就是p1
+        &:nth-of-type(1) {
+            margin-bottom: 14px;
+        }
+
+        &:nth-of-type(2) {
+            margin-bottom: 137px;
+        }
+    }
 }
